syntax = "proto3";

package booking;

option go_package = "booking-service/proto;bookingpb";

service BookingService {
  rpc CreateBooking (CreateBookingRequest) returns (CreateBookingResponse);
  rpc GetBooking (GetBookingRequest) returns (GetBookingResponse);
  rpc CancelBooking (CancelBookingRequest) returns (CancelBookingResponse);
}

message Booking {
  string id = 1;
  string account_id = 2;
  string event_id = 3;
  string status = 4;
}

message CreateBookingRequest {
  string account_id = 1;
  string event_id = 2;
}

message CreateBookingResponse {
  Booking booking = 1;
}

message GetBookingRequest {
  string id = 1;
}

message GetBookingResponse {
  Booking booking = 1;
}

message CancelBookingRequest {
  string id = 1;
}

message CancelBookingResponse {
  bool success = 1;
}
